# event-central

./: .env.sample  .gitignore  compose.dev.yml
api/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  readme.md  requirements.txt
api/migrations/: env.py
api/migrations/versions/: 3691cf064cdd_add_models_for_event_order_payment_.py  392f9648b590_add_localization_to_document_templates.py  51d2b9b569d7_update_tax_handling.py  63212104ea02_add_email_sending.py  6d31654a8895_init.py  adbf04c80b05_add_models_for_async_workers_job.py  bb5c2629011b_add_model_for_stored_files.py  cad0fe61f96e_fix_email_template_versioning.py  cfc2c412ac7a_add_models_for_documenttemplatefile.py  f30ff00addba_update_invoicing_tables.py
api/scripts/: smoke_auth.py  smoke_document_templates.py  smoke_events.py  smoke_files.py  smoke_invoices.py  smoke_misc.py  smoke_orders.py  smoke_payments.py  smoke_users.py
api/src/: config.py  logger.py  main.py  models.py  web.py
api/src/auth/: deps.py  models.py  router.py  schemas.py  service.py
api/src/core/: db.py  deps.py  errors.py  models.py  schemas.py  scopes.py  security.py
api/src/document_templates/: models.py  renderer.py  router.py  schemas.py  service.py
api/src/emails/: deps.py  models.py  renderer.py  router.py  schemas.py  service.py
api/src/events/: models.py  router.py  schemas.py  service.py
api/src/files/: clamav_client.py  images.py  models.py  router.py  schemas.py  service.py
api/src/invoices/: deps.py  exports.py  models.py  numbering.py  router.py  schemas.py  (+1 more)
(+194 files in other folders)
